Intall maui workload prior to ios

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Install maui workload
+      run: dotnet workload install maui
     - name: Install ios workload
       run: dotnet workload install ios
     - name: Restore dependencies
